syntax = "proto3";

package user;

service UserService {
  rpc show(UserId) returns(User) {}
  rpc store(NewUser) returns(Result) {}
}

message UserId {
  string id = 1;
}

message User {
  string name = 1;
  string email = 2;
  string password = 3;
}

message NewUser {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message Result {
  bool status = 1;
}